feat: enhance Twitch command connection handling with user feedback and error resolution